--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   font-family: 'Noto Sans Display', sans-serif;
 }
 
-
+.App {
+  background-color: #fff;
+}
 
 /** Search **/
 .search {
@@ -16,6 +18,13 @@
   align-items: center;
   background-color: #485bb1;
   padding: 40px 10px;
+}
+
+.search h2 {
+  position: relative;
+  margin-top: 10px;
+  color: #fff;
+  font-weight: 400;
 }
 
 .search-title {
@@ -96,6 +105,7 @@ input[type="text"] {
 /** Link books **/
 
 .books_wrapp {
+  
   justify-content: space-evenly;
   margin: 20px auto;
   max-width: 1000px;
@@ -153,3 +163,69 @@ input[type="text"] {
   font-weight: 500;
 }
 
+
+/** loading **/
+
+.loading_wrapp {
+  top: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #212121ed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+  opacity: 0;
+}
+
+.loading_wrapp-active {
+  z-index: 1;
+  opacity: 1;
+  transition: all .3s;
+}
+
+.loading_wrapp h2 {
+  font-size: 40px;
+  letter-spacing: 0.05em;
+  color: #485bb1;
+}
+
+
+/** loadmore**/
+
+.loadmore-wrapp {
+  text-align: center;
+  padding-bottom: 100px;
+}
+
+.loadmore-btn {
+  cursor: pointer;
+  border: none;
+  width: 200px;
+  height: 50px;
+  background: #44aaee;
+  color: #fff;
+  font-size: 20px;
+  transition: background .3s;
+}
+
+.loadmore-btn:hover {
+  transition: background .3s;
+  background: #5db7f3;
+}
+
+
+/** scroll **/
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #44aaee;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
